Add -s key - search by GEOJSON contour.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,12 @@ dependencies = [
     "Pillow",
     "opencv-contrib-python",
     "matplotlib",
+    "requests",
+    "requests-toolbelt",
+    "pyproj",
+    "msvc-runtime",
+    "ezdxf",
+    "pyyaml",
 ]
 license = { file = "LICENSE.md" }
 classifiers = [
